Change image URL in css styles

--- a/05_blurry_loading/style.css
+++ b/05_blurry_loading/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .bg {
-  background: url('img/cars.jpg') no-repeat center center/cover;
+  background: url('https://images.unsplash.com/photo-1599844519453-5787a9c9d8a2?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
   position: absolute;
   top: -30;
   left: -30;
