Change css styles

--- a/04_hidden_search/style.css
+++ b/04_hidden_search/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+  background: #ffcdb2;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -21,8 +21,10 @@ body {
 }
 
 .search .input {
+  font-family: inherit;
   background-color: #fff;
   border: none;
+  border-radius: 5px;
   font-size: 18px;
   padding: 15px;
   height: 50px;
@@ -33,6 +35,7 @@ body {
 .btn {
   background-color: #fff;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
   font-size: 24px;
   position: absolute;
@@ -53,5 +56,5 @@ body {
 }
 
 .search.active .btn {
-  transform: translateX(198px);
+  transform: translateX(190px);
 }
