Change color and text

--- a/11_event_keycodes/style.css
+++ b/11_event_keycodes/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #e1e1e1;
+  background-color: #ffffff;
   font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
@@ -18,13 +18,14 @@ body {
 
 .key {
   border: 1px solid #999;
-  background-color: #eee;
+  background-color: #354f52;
+  color: #efefef;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   /* side by side */
   display: inline-flex;
   align-items: center;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: normal;
   padding: 20px;
   flex-direction: column;
   margin: 10px;
@@ -40,4 +41,5 @@ body {
   width: 100%;
   color: #555;
   font-size: 14px;
+  font-weight: bold;
 }
