--- a/13_random_choice_picker/style.css
+++ b/13_random_choice_picker/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background: #f4f4f4;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
@@ -21,8 +22,9 @@ h3 {
 }
 
 .container {
-  color: #fff;
-  background-color: #5f6eb6;
+  color: #333;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  background-color: #6b9080;
   padding: 30px 50px;
   width: 600px;
 }
@@ -38,8 +40,12 @@ textarea {
   font-size: 16px;
 }
 
+textarea:focus {
+  outline: none;
+}
+
 .tag {
-  background-color: #f0932b;
+  background-color: #c9cba3;
   color: #fff;
   border-radius: 50px;
   padding: 10px 20px;
@@ -49,5 +55,5 @@ textarea {
 }
 
 .tag.highlight {
-  background: #f1c246;
+  background: #f6aa1c;
 }
