--- a/01-expanding-image-cards/style.css
+++ b/01-expanding-image-cards/style.css
@@ -6,17 +6,23 @@
 
 body {
   font-family: 'Muli', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
 }
 
+body p {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+
 .container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 90vw;
+  margin: auto;
 }
 
 .panel {
@@ -35,11 +41,20 @@ body {
   transition: flex 0.7s ease-in;
 }
 
+.panel::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(43, 43, 43, 0.25);
+  border-radius: 50px;
+}
+
 .panel h3 {
   font-size: 24px;
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  top: 20px;
+  left: 30px;
   margin: 0;
   opacity: 0;
 }
