--- a/14-animated-nav/style.css
+++ b/14-animated-nav/style.css
@@ -8,10 +8,10 @@ body {
   background-color: #eafbff;
   background-image: linear-gradient(
     to bottom,
-    #eafbff 0%,
-    #eafbff 50%,
-    #5290f9 50%,
-    #5290f9 100%
+    #edddd4 0%,
+    #edddd4 50%,
+    #c44536 50%,
+    #c44536 100%
   );
   font-family: 'Muli', sans-serif;
   display: flex;
@@ -53,12 +53,13 @@ nav.active ul {
 nav ul li {
   transform: rotateY(0deg);
   opacity: 0;
-  transition: transform 0.6s linear, opacity 0.6s linear;
+  transition: transform 1s linear, opacity 0.15s linear;
 }
 
 nav.active ul li {
   opacity: 1;
   transform: rotateY(360deg);
+  transition: opacity 1s linear;
 }
 
 nav ul a {
@@ -83,7 +84,7 @@ nav ul a {
 }
 
 .icon .line {
-  background-color: #5290f9;
+  background-color: #197278;
   height: 2px;
   width: 20px;
   position: absolute;
