--- a/15-social-media-following/style.css
+++ b/15-social-media-following/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  background-color: #8e44ad;
-  color: #fff;
+  background-color: #0b132b;
+  color: #666;
   font-family: 'Roboto Mono', sans-serif;
   display: flex;
   align-items: center;
@@ -27,6 +27,7 @@ body {
 .counter {
   font-size: 60px;
   margin-top: 10px;
+  color: #fff;
 }
 
 @media (max-width: 580px) {
