--- a/16-hydration-tracker/style.css
+++ b/16-hydration-tracker/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap');
 
 :root {
-  --border-color: #144fc6;
-  --fill-color: #6ab3f8;
+  --border-color: #1b4965;
+  --fill-color: #62b6cb;
 }
 
 * {
@@ -10,8 +10,8 @@
 }
 
 body {
-  background-color: #3494e4;
-  color: #fff;
+  background-color: #f4f4f4;
+  color: #333;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@ h3 {
   background-color: #fff;
   border: 4px solid var(--border-color);
   color: var(--border-color);
-  border-radius: 0 0 40px 40px;
+  border-radius: 10px 10px 40px 40px;
   height: 330px;
   width: 150px;
   margin: 30px 0;
@@ -44,7 +44,7 @@ h3 {
 .cup.cup-small {
   height: 95px;
   width: 50px;
-  border-radius: 0 0 15px 15px;
+  border-radius: 5px 5px 15px 15px;
   background-color: rgba(255, 255, 255, 0.9);
   cursor: pointer;
   font-size: 14px;
@@ -100,5 +100,6 @@ h3 {
 
 .text {
   text-align: center;
+  padding-bottom: 20px;
   margin: 0 0 5px;
 }
