--- a/17-movie-app/style.css
+++ b/17-movie-app/style.css
@@ -16,10 +16,10 @@ body {
 }
 
 header {
-  background-color: var(--secondary-color);
   padding: 1rem;
   display: flex;
   justify-content: flex-end;
+  background-color: var(--secondary-color);
 }
 
 .search {
@@ -44,12 +44,13 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie {
-  background-color: var(--secondary-color);
   width: 300px;
   margin: 1rem;
+  background-color: var(--secondary-color);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
@@ -65,6 +66,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap:0.2rem;
   padding: 0.5rem 1rem 1rem;
   letter-spacing: 0.5px;
 }
@@ -81,7 +83,7 @@ main {
 }
 
 .movie-info span.green {
-  color: #2ecc71;
+  color: lightgreen;
 }
 
 .movie-info span.orange {
@@ -101,6 +103,7 @@ main {
   right: 0;
   max-height: 100%;
   transform: translateY(101%);
+  overflow-y: auto;
   transition: transform 0.3s ease-in;
 }
 
