--- a/17-movie-app/style.css
+++ b/17-movie-app/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
-  --primary-color: #22254b;
-  --secondary-color: #373b69;
+  --primary-color: #38040e;
+  --secondary-color: #640d14;
 }
 
 * {
@@ -33,7 +33,7 @@ header {
 }
 
 .search::placeholder {
-  color: #7378c5;
+  color: var(--primary-color);
 }
 
 .search:focus {
