Change css colors

--- a/17-movie-app/style.css
+++ b/17-movie-app/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
-  --primary-color: #38040e;
-  --secondary-color: #640d14;
+  --primary-color: #1d2d44;
+  --secondary-color: #748cab;
 }
 
 * {
