--- a/18_background_slider/style.css
+++ b/18_background_slider/style.css
@@ -61,8 +61,8 @@ body::before {
   padding: 20px;
   font-size: 25px;
   width: 80px;
-  border: 2px solid orange;
-  color: #e67e22;
+  border: 2px solid #eff6e0;
+  color: #eff6e0;
   border-radius: 50%;
   top: 50%;
   transform: translateY(-50%);
