--- a/19_theme_clock/style.css
+++ b/19_theme_clock/style.css
@@ -126,12 +126,14 @@ body {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   border-radius: 50%;
-  height: 18px;
-  width: 18px;
+  height: 25px;
+  width: 25px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   line-height: 18px;
   transition: all 0.5s ease-in;
   font-size: 12px;
+  margin-left: 3px;
+  margin-bottom: 3px;
 }
