--- a/20_button_ripple/style.css
+++ b/20_button_ripple/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #000;
-  font-family: 'Roboto', sans-serif;
+  background-color: #73d2de;
+  font-family: 'Poppins', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,11 +18,12 @@ body {
 
 button {
   position: relative;
-  background-color: purple;
+  background-color: #218380;
+  font-family: inherit;
   color: #fff;
-  border: 1px purple solid;
-  font-size: 14px;
-  text-transform: uppercase;
+  border: none;
+  box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.2);
+  font-size: 50px;
   letter-spacing: 2px;
   padding: 20px 30px;
   overflow: hidden;
