--- a/21_drag_n_drop/style.css
+++ b/21_drag_n_drop/style.css
@@ -1,22 +1,37 @@
+@import url('https://fonts.googleapis.com/css?family=Heebo:300&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: steelblue;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-family: 'Heebo', sans-serif;
+  background-color: #e7ad99;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+body p {
+  margin-top: 50px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+}
+
+.container {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .empty {
   height: 150px;
   width: 150px;
   margin: 10px;
-  border: solid 3px black;
+  border: solid 3px #ce796b;
   background: white;
 }
 
@@ -28,12 +43,12 @@ body {
 }
 
 .hold {
-  border: solid 5px #ccc;
+  border: solid 3px #ce796b;
 }
 
 .hovered {
-  background-color: #333;
-  border-color: #fff;
+  background-color: #c18c5d;
+  border-color: #ecc8af;
   border-style: dashed;
 }
 
