--- a/22_drawing_app/style.css
+++ b/22_drawing_app/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #f4f4f4;
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
@@ -16,15 +16,15 @@ body {
 }
 
 canvas {
-  border: 2px solid #8e44ad;
+  border: 2px solid #ada7c9;
   background-color: #fff;
 }
 
 .toolbox {
-  background-color: #8e44ad;
-  border: 1px solid #af7ac5;
+  background-color: #ada7c9;
+  border: 1px solid #ada7c9;
   display: flex;
-  width: 804px;
+  width: 504px;
   padding: 1rem;
 }
 
@@ -35,9 +35,9 @@ canvas {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
-  height: 50px;
-  width: 50px;
+  font-size: 1rem;
+  height: 30px;
+  width: 30px;
   margin: 0.25rem;
   padding: 0.25rem;
   cursor: pointer;
