--- a/23_kinetic_css_loader/style.css
+++ b/23_kinetic_css_loader/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #2c3e50;
+  background-color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,7 +27,8 @@ body {
   width: 0;
   height: 0;
   border: 50px solid transparent;
-  border-bottom-color: #fff;
+  border-radius: 50%;
+  border-bottom-color: #6fffe9;
   animation: rotateA 2s linear infinite 0.5s;
 }
 
