--- a/08-form-control-animation/style.css
+++ b/08-form-control-animation/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: steelblue;
+  background-color: #f8f7ff;
   color: #fff;
   font-family: 'Muli', sans-serif;
   display: flex;
@@ -18,9 +18,10 @@ body {
 }
 
 .container {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 126, 167, 0.6);
   padding: 20px 40px;
   border-radius: 5px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.3)
 }
 
 .container h1 {
@@ -30,7 +31,7 @@ body {
 
 .container a {
   text-decoration: none;
-  color: lightblue;
+  color: #003459;
 }
 
 .btn {
@@ -38,6 +39,7 @@ body {
   display: inline-block;
   width: 100%;
   background: lightblue;
+  color: #003459;
   padding: 15px;
   font-family: inherit;
   font-size: 16px;
@@ -77,7 +79,7 @@ body {
 .form-control input:focus,
 .form-control input:valid {
   outline: none;
-  border-bottom-color: lightblue;
+  border-bottom-color: #003459;
 }
 
 /* Labels */
