--- a/03-rotating-navigation/style.css
+++ b/03-rotating-navigation/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color: #333;
+  background-color: #588b8b;
   color: #222;
   overflow-x: hidden;
   margin: 0;
@@ -15,14 +15,14 @@ body {
 .container {
   background-color: #fafafa;
   transform-origin: top left;
-  transition: transform 0.5s linear;
+  transition: transform 1s linear;
   width: 100vw;
   min-height: 100vh;
   padding: 50px;
 }
 
 .container.show-nav {
-  transform: rotate(-20deg);
+  transform: rotate(-40deg);
 }
 
 .circle-container {
@@ -32,7 +32,7 @@ body {
 }
 
 .circle {
-  background-color: #ff7979;
+  background-color: #22333b;
   height: 200px;
   width: 200px;
   border-radius: 50%;
@@ -89,16 +89,16 @@ nav ul {
 }
 
 nav ul li {
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   color: #fff;
-  margin: 40px 0;
+  margin: 20px 0;
   transform: translateX(-100%);
-  transition: transform 0.4s ease-in;
+  transition: transform 0.6s ease-in;
 }
 
 nav ul li i {
-  font-size: 20px;
-  margin-right: 10px;
+  font-size: 16px;
+  margin-right: 5px;
 }
 
 nav ul li + li {
