--- a/24_content_placeholder/style.css
+++ b/24_content_placeholder/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #ecf0f1;
+  background-color: #0a0908;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
