--- a/28-toast-notification/style.css
+++ b/28-toast-notification/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@200;400&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #9b59b6;
-  font-family: 'Poppins', sans-serif;
+  background-color: #f4f1de;
+  font-family: 'Muli', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,13 +17,15 @@ body {
 }
 
 .btn {
-  background-color: #fff;
-  color: #9b59b6;
+  font-size: 20px;
+  background-color: #3d405b;
+  color: #fff;
   font-family: inherit;
-  font-weight: bold;
+  font-weight: normal;
   padding: 1rem;
   border-radius: 5px;
   border: none;
+  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -33,6 +35,10 @@ body {
 
 .btn:active {
   transform: scale(0.98);
+}
+
+.fa-arrow-right {
+  font-size: 18px;
 }
 
 #toasts {
@@ -53,13 +59,16 @@ body {
 }
 
 .toast.info {
-  color: #9b59b6;
+  background-color: #f2cc8f;
+  color: #fff;
 }
 
 .toast.success {
-  color: green;
+  background-color: #81b29a;
+  color: #fff;
 }
 
 .toast.error {
-  color: red;
+  background-color: #9e2a2b;
+  color: #fff;
 }
