--- a/31_good_cheap_fast_checkboxes/style.css
+++ b/31_good_cheap_fast_checkboxes/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  background-color: #403d39;
+  color: #fffcf2;
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
@@ -30,15 +32,23 @@ body {
   position: relative;
   width: 80px;
   height: 40px;
-  background-color: #d0d0d0d0;
+  background-color: #666;
   border-radius: 50px;
   cursor: pointer;
   display: inline-block;
   margin: 0 15px 0;
 }
 
-.toggle:checked + .label {
-  background-color: #8e44ad;
+.good.toggle:checked + .label {
+  background-color: #ff0054;
+}
+
+.great.toggle:checked + .label {
+  background-color: #ff5400;
+}
+
+.amazing.toggle:checked + .label {
+  background-color: #ffbd00;
 }
 
 .ball {
