--- a/35_hoverboard/style.css
+++ b/35_hoverboard/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #111;
+  background-color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 400px;
+  max-width: 300px; /* change width to fit # of squares */
 }
 
 .square {
