--- a/38_password_strength_background/style.css
+++ b/38_password_strength_background/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .background {
-  background: url('images/background-img.jpg') no-repeat center center/cover;
+  background: url('https://images.unsplash.com/photo-1633265486064-086b219458ec?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cGFzc3dvcmR8ZW58MHx8MHx8fDA%3D') no-repeat center center/cover;
   position: absolute;
   top: -20px;
   bottom: -20px;
