--- a/39-3d-box-effect/style.css
+++ b/39-3d-box-effect/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #fafafa;
+  background-color: rgba(51, 53, 51, 0.8);
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
@@ -18,7 +18,7 @@ body {
 }
 
 .magic {
-  background-color: #f9ca24;
+  background-color: #242423;
   color: #fff;
   font-family: 'Poppins', sans-serif;
   border: none;
@@ -30,7 +30,7 @@ body {
   top: 20px;
   letter-spacing: 1px;
   box-shadow: 0 3px;
-  box-shadow: 0 3px rgba(249, 202, 36, 0.5);
+  box-shadow: 0 3px rgba(207, 219, 213, 0.5);
   z-index: 100;
 }
 
@@ -56,15 +56,27 @@ body {
 .boxes.big {
   width: 300px;
   height: 300px;
+  transition: all 0.5s ease-in-out;
 }
 
 .boxes.big .box {
   transform: rotateZ(360deg);
+  transition: transform 0.5s ease;
+}
+
+.boxes.big .box::after {
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: background-color 0.5s ease;
+}
+
+.boxes.big .box::before {
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: background-color 0.5s ease;
 }
 
 .box {
   /* GIF from giphy.com */
-  background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ21mNmx2emlhZmU2NjNkcG5ldjhpaDViczlvM3docnBqeHUxYnkzOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ZXXshfXaR8IwQFUEj7/giphy.gif');
+  background-image: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcjRydDU3ZzJjN2g1eWxycjhrMGp4Y2p0ZGkzeWlocTE1ZWdpOTAyZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CEK6VlVkjTZ5u/giphy.gif');
   background-repeat: no-repeat;
   background-size: 250px 250px;
   position: relative;
@@ -75,7 +87,7 @@ body {
 
 .box::after {
   content: '';
-  background-color: #f6e58d;
+  background-color: #242423;
   position: absolute;
   top: 8px;
   right: -15px;
@@ -86,7 +98,7 @@ body {
 
 .box::before {
   content: '';
-  background-color: #f9ca24;
+  background-color: #242423;
   position: absolute;
   bottom: -15px;
   left: 8px;
