--- a/40_verify_account_ui/style.css
+++ b/40_verify_account_ui/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #fbfcfe;
-  font-family: 'Muli', sans-serif;
+  background-color: #333533;
+  font-family: 'Nunito Sans', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,9 +15,17 @@ body {
   margin: 0;
 }
 
+h2 {
+  font-weight: bold;
+  font-size: 2rem;
+  color: #fff;
+}
+
 .container {
-  background-color: #fff;
-  border: 3px #000 solid;
+  color: rgba(225, 225, 225, 0.7);
+  background-color: rgb(0, 0, 0, 0.5);
+  border: 3px #1982c4 solid;
+  box-shadow: 0px 0px 10px 2px #1982c4;
   border-radius: 10px;
   padding: 30px;
   max-width: 1000px;
@@ -32,6 +40,8 @@ body {
 }
 
 .code {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
   border-radius: 5px;
   font-size: 75px;
   height: 120px;
@@ -43,6 +53,10 @@ body {
   -moz-appearance: textfield;
 }
 
+.code::placeholder {
+  color: rgba(225, 225, 225, 0.2);
+}
+
 .code::-webkit-outer-spin-button,
 .code::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -50,7 +64,8 @@ body {
 }
 
 .code:focus {
-  outline-color: #282096;
+  outline-color: #1982c4;
+  box-shadow: 0 10px 10px -5px #1982c4;
 }
 
 .code:valid {
@@ -59,12 +74,12 @@ body {
 }
 
 .info {
-  background-color: #eaeaea;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgba(225, 225, 225, 0.7);
   display: inline-block;
   padding: 10px;
   line-height: 20px;
   max-width: 400px;
-  color: #777;
   border-radius: 5px;
 }
 
