--- a/36-pokedex-app/style.css
+++ b/36-pokedex-app/style.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;400&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background: #efefbb;
-  background: linear-gradient(to right, #d4d3dd, #efefbb);
-  font-family: 'Lato', sans-serif;
+  background: #fffcf2;
+  /*background: linear-gradient(to right, #d4d3dd, #efefbb);*/
+  font-family: 'Muli', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,8 @@ body {
 }
 
 h1 {
-  letter-spacing: 3px;
+  font-weight: bold;
+  color: #333533;
 }
 
 .poke-container {
@@ -30,6 +31,7 @@ h1 {
 
 .pokemon {
   background-color: #eee;
+  border: 2px solid rgba(51, 53, 51, 0.5);
   border-radius: 10px;
   box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
   margin: 10px;
