--- a/41_live_user_filter/style.css
+++ b/41_live_user_filter/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #f8f9fd;
+  background-color: #faf0ca;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -23,7 +23,7 @@ body {
 }
 
 .header {
-  background-color: #3e57db;
+  background-color: #723d46;
   color: #fff;
   padding: 30px 20px;
 }
@@ -46,6 +46,10 @@ body {
   font-size: 14px;
   padding: 10px 15px;
   width: 100%;
+}
+
+.header input::placeholder {
+  color: rgba(225, 225, 225, 0.5);
 }
 
 .header input:focus {
