Modify css styles

--- a/44_netflix_navigation/style.css
+++ b/44_netflix_navigation/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Muli', sans-serif;
+  background-color: #495867;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,11 +15,22 @@ body {
 }
 
 .text {
+  color: #fff;
   text-transform: uppercase;
+  font-size: 20px;
+  margin-bottom: 0;
+  font-weight: bold;
 }
 
-.logo {
-  width: 150px;
+.context {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 16px;
+}
+
+.fa-bars {
+  background-color: #f4f4f4;
+  border-radius: 2px;
+  padding: 7px 10px;
 }
 
 .nav-btn {
@@ -47,37 +59,37 @@ body {
   transform: translateX(0);
 }
 
-.nav-black {
-  background-color: rgb(34, 31, 31);
+.nav-one {
+  background-color: #577399;
   width: 60%;
   max-width: 480px;
   min-width: 320px;
   transition-delay: 0.4s;
 }
 
-.nav-black.visible {
+.nav-one.visible {
   transition-delay: 0s;
 }
 
-.nav-red {
-  background-color: rgb(229, 9, 20);
+.nav-two {
+  background-color: #fe5f55;
   width: 95%;
   transition-delay: 0.2s;
 }
 
-.nav-red.visible {
+.nav-two.visible {
   transition-delay: 0.2s;
 }
 
-.nav-white {
-  background-color: #fff;
+.nav-three {
+  background-color: #f7f7ff;
   width: 95%;
   padding: 40px;
   position: relative;
   transition-delay: 0s;
 }
 
-.nav-white.visible {
+.nav-three.visible {
   transition-delay: 0.4s;
 }
 
