--- a/45_quiz_app/style.css
+++ b/45_quiz_app/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 100%);
+  background-color: #14746f;
   font-family: 'Poppins', sans-serif;
   display: flex;
   align-items: center;
@@ -17,9 +16,10 @@ body {
 }
 
 .quiz-container {
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   width: 600px;
   overflow: hidden;
 }
@@ -49,7 +49,7 @@ ul li label {
 }
 
 button {
-  background-color: #8e44ad;
+  background-color: #56ab91;
   border: none;
   color: #fff;
   display: block;
@@ -61,10 +61,10 @@ button {
 }
 
 button:hover {
-  background-color: #732d91;
+  background-color: #78c6a3;
 }
 
 button:focus {
   outline: none;
-  background-color: #5e3370;
+  background-color: #67b99a;
 }
