--- a/47_image_feed/style.css
+++ b/47_image_feed/style.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
+  background-color: #edf2f4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +16,8 @@ body {
 }
 
 .title {
-  margin: 10px 0 0;
+  margin: 15px 0;
+  text-transform: uppercase;
   text-align: center;
 }
 
@@ -29,6 +31,7 @@ body {
 
 .container img {
   object-fit: cover;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
   margin: 10px;
   height: 300px;
   width: 300px;
