--- a/48-todo-list/style.css
+++ b/48-todo-list/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  background-color: #f5f5f5;
-  /* background-image: linear-gradient(135deg, #f5f5f5 0%, #c3cfe2 100%); */
+  background-color: #253237;
   color: #444;
   font-family: 'Poppins', sans-serif;
   display: flex;
@@ -18,7 +17,7 @@ body {
 }
 
 h1 {
-  color: rgb(179, 131, 226);
+  color: rgba(0, 0, 0, 0.5);
   font-size: 10rem;
   text-align: center;
   opacity: 0.4;
@@ -31,8 +30,9 @@ form {
 }
 
 .input {
+  background-color: rgba(0, 0, 0, 0.5);
   border: none;
-  color: #444;
+  color: #d5d5d5;
   font-size: 2rem;
   padding: 1rem 2rem;
   display: block;
@@ -40,34 +40,35 @@ form {
 }
 
 .input::placeholder {
-  color: #d5d5d5;
+  color: #444;
 }
 
 .input:focus {
-  outline: 2px solid rgb(179, 131, 226);
+  outline: 2px solid #00a5cf;
 }
 
 .todos {
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #d5d5d5;
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
 
 .todos li {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid #00a5cf;
   cursor: pointer;
   font-size: 1.5rem;
   padding: 1rem 2rem;
 }
 
 .todos li.completed {
-  color: #b6b6b6;
+  color: #444;
   text-decoration: line-through;
 }
 
 small {
-  color: #b5b5b5;
+  color: rgba(225, 225, 225, 0.5);
   margin-top: 3rem;
   text-align: center;
 }
