--- a/52_css_3D_text/style.css
+++ b/52_css_3D_text/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #f4f4f4;
+  background-color: #ebebeb;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@ body {
   overflow: hidden;
 }
 
-#text {
+.text {
   position: relative;
   color: #fff;
   font-weight: 700;
@@ -27,13 +27,13 @@ body {
   transform: rotate(-28deg) skew(25deg);
 }
 
-#text::before {
+.text::before {
   content: attr(data-text);
   position: absolute;
   top: 20px;
   left: -30px;
   color: rgba(0, 0, 0, 0.3);
   text-shadow: none;
-  filter: blur(8px);
+  filter: blur(10px);
   z-index: -1;
 }
