--- a/53_direction_aware_image_hover/style.css
+++ b/53_direction_aware_image_hover/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #023047;
+  background: #364958;
 }
 
 .container {
@@ -29,6 +29,7 @@ body {
   height: 420px;
   margin: 15px;
   overflow: hidden;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
 }
 
 .container .card span {
@@ -38,8 +39,8 @@ body {
   height: 0;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  opacity: 0.95;
-  background: #023e8a;
+  opacity: 0.75;
+  background: #3b6064;
   z-index: 1;
   transition: width 0.5s, height 0.5s;
 }
