--- a/54-css-house-drawing/style.css
+++ b/54-css-house-drawing/style.css
@@ -10,13 +10,14 @@ body {
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
+  background: #022b3a;
 }
 
 .house {
   position: relative;
   width: 700px;
   height: 350px;
-  background: #ccc;
+  background: #022b3a;
   border-bottom: 8px solid #175117;
 }
 
@@ -54,7 +55,7 @@ body {
   left: 0;
   width: 60%;
   height: 100%;
-  background: #257582;
+  background: #fe5f55;
   transform: skewX(330deg);
 }
 
@@ -65,7 +66,7 @@ body {
   right: 0;
   width: 60%;
   height: 100%;
-  background: #257582;
+  background: #fe5f55;
   transform: skewX(30deg);
 }
 
@@ -76,7 +77,7 @@ body {
   transform: translateX(-50%);
   width: 180px;
   height: 180px;
-  background: #f1f1f1;
+  background: #ffe8d6;
 }
 
 .front::before {
@@ -86,7 +87,7 @@ body {
   top: -64px;
   height: 126px;
   width: 126px;
-  background: #f1f1f1;
+  background: #ffe8d6;
   transform: translateX(-50%) rotate(45deg);
   border-top: 4px solid #222;
   border-left: 4px solid #222;
@@ -107,7 +108,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #f7f7ff 10%, #f7f7ff 90%);
   background-size: 10px 15px;
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
@@ -141,7 +142,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #f4f1bb 10%, #f4f1bb 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-top: 5px solid #333;
@@ -163,7 +164,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #f4f1bb 10%, #f4f1bb 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-top: 5px solid #333;
@@ -175,8 +176,8 @@ body {
   top: 38%;
   width: 100%;
   height: 12px;
-  border-top: 4px solid #257582;
-  border-bottom: 4px solid #257582;
+  border-top: 4px solid #495867;
+  border-bottom: 4px solid #495867;
 }
 
 .adjst {
@@ -196,7 +197,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #e1e5f2 10%, #e1e5f2 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-top: 5px solid #333;
@@ -216,7 +217,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #e1e5f2 10%, #e1e5f2 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-bottom: 5px solid #333;
@@ -237,7 +238,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #e1e5f2 10%, #e1e5f2 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-top: 5px solid #333;
@@ -257,7 +258,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #e1e5f2 10%, #e1e5f2 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-bottom: 5px solid #333;
@@ -271,7 +272,7 @@ body {
   left: -120px;
   width: 140px;
   height: 140px;
-  background: #f1f1f1;
+  background: #ffe8d6;
 }
 
 .side::before {
@@ -281,7 +282,7 @@ body {
   left: 50%;
   width: 100px;
   height: 100px;
-  background: #f1f1f1;
+  background: #ffe8d6;
   transform: translateX(-50%) rotate(45deg);
   border-top: 4px solid #222;
   border-left: 4px solid #222;
@@ -302,7 +303,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #f7f7ff 10%, #f7f7ff 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
   border-top-left-radius: 60px;
@@ -326,7 +327,7 @@ body {
       transparent 90%,
       #333 90%
     ),
-    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+    linear-gradient(to bottom, transparent 10%, #f7f7ff 10%, #f7f7ff 90%);
   background-size: 10px 10px;
   border: 2px solid #333;
 }
@@ -337,7 +338,7 @@ body {
   right: -120px;
   width: 120px;
   height: 120px;
-  background: #94ab38;
+  background: #98c9a3;
   border-top-left-radius: 100px;
   border-bottom-right-radius: 100px;
   /* rotates the entire tree */
@@ -358,6 +359,6 @@ body {
 .tree2 {
   top: -50px;
   right: -70px;
-  background: #7b921f;
+  background: #77bfa3;
   transform: rotate(315deg) scale(1.25);
 }
