--- a/57_isometric_card_hover/style.css
+++ b/57_isometric_card_hover/style.css
@@ -79,7 +79,7 @@ body {
   left: 0;
   width: 100%;
   height: 30px;
-  background: #ffddd2;
+  background: #2d3142;
   transform-origin: bottom;
   transform: skewX(45deg);
   transition: 0.5s;
@@ -92,7 +92,7 @@ body {
   left: -29px;
   width: 30px;
   height: 50%;
-  background: #ffddd2;
+  background: #2d3142;
   transform-origin: left;
   transform: skewY(45deg);
   transition: 0.5s;
@@ -107,21 +107,25 @@ body {
   position: relative;
   width: 300px;
   height: 200px;
-  background: #ffddd2;
+  background: #2d3142;
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.container .card .imgBx img {
+i {
+  font-size: 36px;
+}
+
+.container .card .imgBx i {
   max-width: 100px;
   opacity: 0.5;
 }
 
 .container .card .imgBx h3 {
   position: relative;
-  color: #333;
   margin-top: 10px;
 }
 
