Modify css styles

--- a/59_perpetual_animation_effect/style.css
+++ b/59_perpetual_animation_effect/style.css
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #1c1f2f;
+  background: #2d3142;
 }
 
 .container {
@@ -23,8 +23,8 @@ body {
   height: 200px;
   border-radius: 50%;
   border: 20px solid transparent;
-  border-bottom: 20px solid #06c8f0;
-  border-right: 20px solid #06c8f0;
+  border-bottom: 20px solid #577399;
+  border-right: 20px solid #577399;
   transform: rotate(45deg);
   animation: animate 4s ease-in-out infinite;
 }
@@ -71,6 +71,6 @@ body {
   right: 15px;
   width: 40px;
   height: 40px;
-  background: #fff;
+  background: #f7f7ff;
   border-radius: 50%;
 }
