--- a/61_responsive_card_hover/style.css
+++ b/61_responsive_card_hover/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #16384c;
+  background: #111;
 }
 
 .container {
@@ -28,12 +28,12 @@ body {
   position: relative;
   max-width: 300px;
   height: 150px;
-  background: #fff;
+  background-color: rgba(225, 225, 225, 0.1);
   margin: 30px 10px;
   padding: 20px 15px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.9);
   transition: 0.3s ease-in-out;
 }
 
@@ -61,10 +61,18 @@ body {
   margin-top: -140px;
   padding: 10px 15px;
   text-align: center;
-  color: #111;
+  color: #fff;
   visibility: hidden;
   opacity: 0;
   transition: 0.3s ease-in-out;
+}
+
+.container .card .content h2 {
+  text-transform: uppercase;
+}
+
+.container .card .content p {
+  color: rgba(225, 225, 225, 0.5);
 }
 
 .container .card:hover .content {
