Modify css styles

--- a/62_svg_elastic_line_animation/style.css
+++ b/62_svg_elastic_line_animation/style.css
@@ -24,7 +24,7 @@ svg:nth-child(2) {
 
 svg path {
   d: path('M0,25 C150,110 150,-60 300,25');
-  stroke: #ff0092;
+  stroke: #41ead4;
   stroke-width: 50;
   stroke-linecap: round;
   transform: translate(50px, 50%);
@@ -33,8 +33,11 @@ svg path {
 
 @keyframes animate {
   0% {
-    stroke: #ff0092;
+    stroke: #41ead4;
     d: path('M0,25 C150,110 150,-60 300,25');
+  }
+  25% {
+    stroke: #ff206e;
   }
   50% {
     stroke: #ba01ff;
