--- a/64_3d_card_effect/style.css
+++ b/64_3d_card_effect/style.css
@@ -6,6 +6,7 @@
 
 body {
    font-family: 'Poppins', sans-serif;
+  background-color: #111;
    min-height: 100vh;
    display: flex;
    align-items: center;
@@ -27,7 +28,7 @@ body {
    /* 0 = left & right
       20 = top & bottom
       20 = amount of blur */
-   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.5), 0px 0px 50px rgba(0, 0, 0, 0.5);
    border-radius: 30px;
    padding: 0 5rem;
 }
@@ -50,8 +51,8 @@ body {
    height: 15rem;
    background: linear-gradient(
       to right,
-      rgba(245,70,66,0.75),
-      rgba(8,83,156,0.75)
+      rgba(48, 99, 142,0.75),
+      rgba(0, 121, 140,0.75)
    );
    position: absolute;
    border-radius: 50%;
@@ -60,6 +61,8 @@ body {
 
 .info h1 {
    font-size: 3rem;
+  color: #fff;
+  text-transform: uppercase;
    transition: all 0.75s ease-out;
 }
 
@@ -79,17 +82,22 @@ body {
 
 .sizes button {
    padding: 0.5rem 2rem;
-   background: none;
+   background: #585858;
+  color: #000;
    border: none;
-   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
    border-radius: 30px;
    cursor: pointer;
    font-weight: bold;
-   color: #585858;
+}
+
+.sizes button:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
 }
 
 button.active {
-   background: #585858;
+   background: #003D5B;
    color: #fff;
 }
 
@@ -101,7 +109,8 @@ button.active {
 .purchase button {
    width: 100%;
    padding: 1rem 0;
-   background: #f54642;
+   background: #003D5B;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
    border: none;
    color: #fff;
    cursor: pointer;
