--- a/40-dark-theme-varification/style.css
+++ b/40-dark-theme-varification/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #000;
-  font-family: 'Nunito Sans', sans-serif;
+  background-color: #0a0908;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +16,8 @@ body {
 }
 
 h2 {
-  font-weight: bold;
+  font-weight: normal;
+  text-transform: uppercase;
   font-size: 2rem;
   color: #fff;
 }
@@ -24,8 +25,8 @@ h2 {
 .container {
   color: rgba(225, 225, 225, 0.7);
   background-color: rgb(225, 225, 225, 0.1);
-  border: 3px #1982c4 solid;
-  box-shadow: 0px 0px 10px 2px #1982c4;
+  border: 1px #1982c4 solid;
+  box-shadow: 0px 0px 5px 1px #1982c4;
   border-radius: 10px;
   padding: 30px;
   max-width: 1000px;
