--- a/64-exchange-rate-calc/style.css
+++ b/64-exchange-rate-calc/style.css
@@ -1,1 +1,117 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+:root {
+  --primary-color: #00a5cf;
+  --secondary-color: #004e64;
+  --dark-bg-color: #253237;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--dark-bg-color);
+  color: #fff;
+  font-family: 'Mulish', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  color: #fff;
+  text-align: center;
+  text-transform: lowercase;
+}
+
+p {
+  text-align: center;
+  text-transform: lowercase;
+}
+
+.fa-arrow-right-arrow-left {
+  color: var(--primary-color);
+  font-size: 5rem;
+  /* text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.9); */
+}
+
+.btn {
+  position: relative;
+  top: 0;
+  left: 10px;
+  color: #fff;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  outline: none;
+  border: none;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
+.currency {
+  padding: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.currency select {
+  padding: 15px 30px 15px 15px;
+  font-size: 14px;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  outline: none;
+  border: 1px solid var(--secondary-color);
+  border-radius: 5px;
+}
+
+.currency i {
+  position: relative;
+  top: -2px;
+  left: 65px;
+}
+
+.currency input {
+  border: 0;
+  background: transparent;
+  color: var(--primary-color);
+  font-size: 30px;
+  text-align: right;
+}
+
+.currency input::placeholder {
+  color: var(--secondary-color);
+}
+
+.currency input:focus {
+  outline: 0;
+}
+
+.swap-rate-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.rate {
+  color: var(--primary-color);
+  font-size: 14px;
+  padding: 0 10px;
+}
+
+@media(max-width: 600px) {
+  .currency input {
+    width: 200px;
+  }
+}
