--- a/64-exchange-rate-calc/style.css
+++ b/64-exchange-rate-calc/style.css
@@ -109,6 +109,7 @@ p {
 .rate {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--secondary-color);
   opacity: 0.7;
   padding: 10px 15px;
   font-size: 14px;
