--- a/65-random-user-actions/style.css
+++ b/65-random-user-actions/style.css
@@ -25,8 +25,8 @@ body {
 
 aside {
   padding: 10px 20px;
-  width: 300px;
-  border-right: 1px solid #fff;
+  width: 250px;
+  border-right: 2px solid #3d5a80;
 }
 
 button {
@@ -56,8 +56,8 @@ main {
 
 h2 {
   background-color: rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid #3d5a80;
   margin: 0 0 20px;
-  border-radius: 5px;
   padding: 5px 10px 10px 10px;
   display: flex;
   justify-content: space-between;
@@ -77,6 +77,9 @@ h3 {
 .person {
   display: flex;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 10px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
