--- a/65-random-user-actions/style.css
+++ b/65-random-user-actions/style.css
@@ -24,8 +24,11 @@ body {
 }
 
 aside {
-  padding: 10px 20px;
+  padding: 30px 30px 10px 30px;
   width: 250px;
+  max-height: 345px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 
 button {
