Update css styles

--- a/65-random-user-actions/style.css
+++ b/65-random-user-actions/style.css
@@ -48,7 +48,7 @@ button {
 }
 
 button:hover {
-  background-color: #184e77;
+  background-color: rgba(61, 90, 128, 0.7);
 }
 
 main {
@@ -57,7 +57,7 @@ main {
 }
 
 h2 {
-  border-bottom: 2px solid #3d5a80;
+  border-bottom: 3px solid #184e77;
   margin: 0 0 20px;
   padding: 5px 10px 10px 10px;
   display: flex;
@@ -66,9 +66,9 @@ h2 {
 }
 
 h3 {
-  background-color: #fff;
+  background-color: #184e77;
+  border-radius: 5px;
   margin: 20px 0 0;
-  border-bottom: 1px solid #fff;
   padding: 10px;
   display: flex;
   justify-content: space-between;
