--- a/67-hangman/style.css
+++ b/67-hangman/style.css
@@ -17,13 +17,13 @@ body {
 }
 
 h1 {
-  margin: 20px 0 0;
+  margin: 100px 0 0;
 }
 
 .game-container {
   padding: 20px 30px;
   position: relative;
-  margin: auto;
+  margin-top: 20px;
   height: 350px;
   width: 450px;
 }
