--- a/68-recipe-finder/style.css
+++ b/68-recipe-finder/style.css
@@ -49,6 +49,10 @@ input[type="text"]:focus {
   outline: none;
 }
 
+input[type="text"]::placeholder {
+  color: rgba(225, 225, 225, 0.3);
+}
+
 .search-btn {
   cursor: pointer;
   border-left: 0;
