Add styles for recipe info

--- a/68-recipe-finder/style.css
+++ b/68-recipe-finder/style.css
@@ -108,8 +108,8 @@ input[type="text"]::placeholder {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 105%;
+  width: 105%;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
@@ -118,6 +118,13 @@ input[type="text"]::placeholder {
   opacity: 0;
 }
 
+.recipe-info h3 {
+  padding: 0 10px;
+}
+
+.recipe:hover .recipe-info {
+  opacity: 1;
+}
 
 @media(max-width: 800px) {}
 @media(max-width: 700px) {}
